Introduce `FINAL` course unit type